[package]
name = "guestio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.11.0"
criterion = "0.3.6"
thiserror = "1.0.32"
guestio_derive = {path = "../guestio_derive"}
impl-trait-for-tuples = "0.2.2"


[[bench]]
name = "ser_der"
harness = false
